--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,21 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/MainFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/MainFragment"
         android:name="com.juanlugg8.fitnessmanager.MainFragment"
         android:label="@string/mainfragment"
         tools:layout="@layout/fragment_main">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_MainFragment_to_UserFragment"
+            app:destination="@id/UserListFragment" />
+        <action
+            android:id="@+id/action_MainFragment_to_ProfileListFragment"
+            app:destination="@id/ProfileListFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
+        android:id="@+id/UserListFragment"
         android:name="com.juanlugg8.fitnessmanager.UserListFragment"
         android:label="@string/userlist"
         tools:layout="@layout/fragment_user_list"/>
+    <fragment
+        android:id="@+id/ProfileListFragment"
+        android:name="com.juanlugg8.fitnessmanager.ProfileListFragment"
+        android:label="@string/profilelistfragment"
+        tools:layout="@layout/fragment_profile_list"/>
 </navigation>
