--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,8 +18,8 @@
 
     <Button
         android:id="@+id/btnProfile"
-        android:layout_width="99dp"
-        android:layout_height="44dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="60dp"
         android:text="@string/btnProfile"
         app:layout_constraintBottom_toBottomOf="parent"
